Fixed track alignment

--- a/client/src/containers/Album/Album.css
+++ b/client/src/containers/Album/Album.css
@@ -91,12 +91,13 @@
   font-size: 14px;
   font-weight: 700;
   margin-left: 1rem;
+  width: 30px;
 }
 
 .album__tracks-info {
   display: flex;
   flex-direction: column;
-  margin-left: 1.7rem;
+  margin-left: 0.4rem;
   gap: 0.5rem;
 }
 
